--- a/src/app/layout/landing/template/landing-categories/landing-categories.component.html
+++ b/src/app/layout/landing/template/landing-categories/landing-categories.component.html
@@ -3,7 +3,8 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="marketplace-categories_heading">
-                    <h3>{{'categories' | localization | translate}}</h3>
+                    <!-- <h3>{{'Featured products' | localization | translate}}</h3> -->
+                    <h3>Featured products</h3>
                 </div>
             </div>
             <div class="col-md-12">
