--- a/src/app/layout/shared/home/components/banner/banner.component.html
+++ b/src/app/layout/shared/home/components/banner/banner.component.html
@@ -47,10 +47,13 @@
     <div class="banner" [style.direction]="'ltr'" [style.height]="banner_height" *ngIf="!isLoading && banners.length">
       <ngx-slick-carousel class="carousel" #slickModal="slick-carousel" [config]="slideConfig">
         <div ngxSlickItem *ngFor="let banner of banners; let i = index;trackBy:trackByBannersFn;" class="slide">
-          <img class="banner-img" [height]="banner_height" [noCrop]="settings?.is_crop_banner == 0 ? true : false"
-            alt="banner" [ngClass]="{'pointer': banner.supplier_id && (settings.single_vendor_id == 0)}" appImage
-            [url]="is_mobile ? banner?.phone_image : banner?.website_image" [size]="size" [src]="banner?.website_image"
-            onError="src = './assets/images/placeholder_image.svg';" (click)="viewSupplier(banner)">
+          <img sizes="812px" class="banner-img" height="100%" [noCrop]="settings?.is_crop_banner == 0 ? true : false"
+          alt="banner" [ngClass]="{'pointer': banner.supplier_id && (settings.single_vendor_id == 0)}" appImage
+          [size]="size" onError="src = './assets/images/placeholder_image.svg';" (click)="viewSupplier(banner)" src="https://www-leshop-ch-cld-res.cloudinary.com/image/upload/w_1104,c_pad,g_south,dpr_1,fl_lossy,b_rgb:fff/f_auto/e_unsharp_mask:100/q_auto/v20210621/prod/commercial-zone/356602-desktop-en">
+          <br>
+          <img sizes="812px" class="banner-img" height="100%" [noCrop]="settings?.is_crop_banner == 0 ? true : false"
+          alt="banner" [ngClass]="{'pointer': banner.supplier_id && (settings.single_vendor_id == 0)}" appImage
+          [size]="size" onError="src = './assets/images/placeholder_image.svg';" (click)="viewSupplier(banner)" src="https://www-leshop-ch-cld-res.cloudinary.com/image/upload/w_1104,c_pad,g_south,dpr_1,fl_lossy,b_rgb:fff/f_auto/e_unsharp_mask:100/q_auto/v20210621/prod/commercial-zone/356719-desktop-en">
         </div>
       </ngx-slick-carousel>
     </div>
