--- a/src/app/layout/shared/home/components/popular-products/popular-products.component.html
+++ b/src/app/layout/shared/home/components/popular-products/popular-products.component.html
@@ -26,10 +26,36 @@
                         </div>
                     </ng-template>
                     <ng-template #noData>
-                        <div class="home-no-data">
+                        <div class="product-container" *ngFor="let item of [1,2,3,4,5,6,7,8,9,10]">
+                            <div class="head">
+                                <img src="/assets/images/plus.png" alt="" width="15" height="15"
+                                    style="    margin-right: -10px;">
+                            </div>
+                            <div class="img">
+                                <img src="https://www.pngitem.com/pimgs/m/160-1607211_dr-ko-product-hd-png-download.png "
+                                    alt="" width="100" height="100">
+                            </div>
+                            <div class="desc">
+                                <div>
+
+                                    <span class="discount">20%</span>
+                                </div>
+                                <br style="padding: 0;">
+                                <div class="price">
+                                    <span class="price1">430</span><span class="price2">was 600</span>
+                                </div>
+                                <div>
+                                    <span _ngcontent-website-js-c207="" class="weight-priceUnit">500g &nbsp;
+                                        8.60/kg</span>
+                                </div>
+                                <app-quantity-buttons [style]="style" [settings]="settings" @fade>
+                                </app-quantity-buttons>
+                            </div>
+                        </div>
+                        <!-- <div class="home-no-data">
                             <h4 [style.color]="style.baseColor">{{'No' | translate}} {{'product' | localization}}
                                 {{'Found' | translate}}</h4>
-                        </div>
+                        </div> -->
                     </ng-template>
                 </div>
 
