--- a/src/app/layout/common/header/header.component.scss
+++ b/src/app/layout/common/header/header.component.scss
@@ -35,6 +35,10 @@ a {
   min-width: 8rem !important;
   padding: 0.5rem 0.5rem !important;
 }
+.home_sidenav {
+  background-color: #eff2f5 !important;
+    width: 250px;
+}
 
 @media screen and (max-width: 812px) {
   .open_menu {
