--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -4,10 +4,10 @@
     <div class="offset_top"></div>
 
     <div class="row full-dashboard">
-        <div class="col-md-2" style="overflow: scroll; height: 100vh; background-color: #eff2f5;">
-            <app-product-sidebar></app-product-sidebar>
+        <div class="col-md-2" *ngIf="!myflag" style="overflow: scroll; height: 100vh; background-color: #eff2f5;">
+            <app-product-sidebar (sidenav)="sidenav=$event"></app-product-sidebar>
         </div>
-        <div class="col-md-8" style="overflow: scroll; height: 100vh; padding-top: 1rem;">
+        <div [ngClass]="myflag ? 'col-md-10' : 'col-md-8'" style="overflow: scroll; height: 100vh; padding-top: 1rem;">
             <div [ngClass]="nav_fixed && !isMobile ? 'fix-section' : (isMobile ? 'mobile-top-bottom-margin' : '')"
                 [style.backgroundImage]="layout_background">
                 <router-outlet (activate)="util.goToTop()"></router-outlet>
