--- a/src/app/layout/shared/home/components/popular-products/popular-products.component.html
+++ b/src/app/layout/shared/home/components/popular-products/popular-products.component.html
@@ -26,7 +26,8 @@
                         </div>
                     </ng-template>
                     <ng-template #noData>
-                        <div class="product-container" *ngFor="let item of [1,2,3,4,5,6,7,8,9,10]">
+                        <div class="product-container" *ngFor="let item of [1,2,3,4,5,6,7,8,9,10]" data-toggle="modal"
+                            data-target="#productDescription">
                             <div class="head">
                                 <img src="/assets/images/plus.png" alt="" width="15" height="15"
                                     style="    margin-right: -10px;">
@@ -101,21 +102,85 @@
     </ng-template>
 </ng-container>
 
-<div class="modal" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
+<div id="productDescription" class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-dialog-centered  modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Modal title</h5>
+                <!-- <h5 class="modal-title">Description</h5> -->
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <p>Modal body text goes here.</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary">Save changes</button>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <div class="row">
+                    <div class="col-md-7 img-shadow">
+                        <img src="https://www.pngitem.com/pimgs/m/160-1607211_dr-ko-product-hd-png-download.png " alt=""
+                            width="100%" height="300">
+                    </div>
+                    <div class="col-md-5">
+                        <div class="right-section" style="max-height: 15rem; overflow-y: scroll;">
+                            <span class="prod-name">Garnier Cream</span> <br>
+                            <div class="sec">
+                                <span class="heading">Category</span><br>
+                                <span class="description">Fruits & VegetablesFruitsMelons, Pome Fruits & Other Fruits</span>
+                            </div>
+                            <div class="sec">
+                                <span class="heading">Storage</span><br>
+                                <span class="description">Aprikosen sollten nach dem Kauf schnell verbraucht werden, damit das
+                                    Fruchtfleisch nicht weich wird und den Geschmack verliert. Vermeiden Sie Kälte. Wenn
+                                    es sehr warm ist, können Sie sie 2 bis 3 Tage im Gemüsefach des Kühlschranks
+                                    aufbewahren.</span>
+                            </div>
+                            <div class="sec">
+                                <span class="heading">Origin</span><br>
+                                <span class="description">Spanien/Italien</span>
+                            </div>
+                            <div class="sec">
+                                <span class="heading">Additional information</span><br>
+                                <span class="description">Until the 17th century apricots were considered to be early ripening
+                                    peaches. The color of the apricot is a varietal characteristic and not a ripeness
+                                    characteristic. Apricots are very sensitive to pressure and impact.</span>
+                            </div>
+                            <div class="sec">
+                                <span class="heading">Useful tips</span><br>
+                                <span class="description">In this case, take the apricots out of the refrigerator 20 minutes
+                                    before eating them, so that the full flavor can develop.</span>
+                            </div>
+                            <div class="sec">
+                                <span class="heading">Import / Distribution</span><br>
+                                <span class="description">
+                                    <pre>Migros-Genossenschafts-Bund
+Limmatstrasse 152
+8031 Zürich</pre>
+                                </span>
+                            </div>
+                            <div class="sec">
+                                <span class="heading">Product ID: 6417278</span>
+                            </div>
+                        </div>
+                        <div class="mt-4">
+                            <div class="desc">
+                                <div style="color: white;">
+                                    <span class="discount">20%</span>
+                                </div>
+                                <br style="padding: 0;">
+                                <div class="price">
+                                    <span class="price1">430</span><span class="price2">was 600</span>
+                                </div>
+                                <div>
+                                    <span _ngcontent-website-js-c207="" class="weight-priceUnit">500g &nbsp;
+                                        8.60/kg</span>
+                                </div>
+                                <div class="d-flex justify-content-between align-items-center mt-1">
+                                    <button type="button" class="btn btn-primary" style="    background-color: rgb(250, 165, 28);
+                                    color: rgb(255, 255, 255);
+                                    border: rgb(250, 165, 28);">Add to basket</button>
+                                    <i class="fa fa-heart" size='12' style="color: grey;"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
